Changes required for java 17
We got some runtime errors when calling `registerModel` with wrong type error, as
well as some swagger stuff with `UUID`, this patch fixes that.